# CPP_Web_Server

./: CMakeLists.txt  LICENSE  README.md
CPP_Web_Server/: CMakeLists.txt  main.cpp
CPP_Web_Server/Source/CPP_Logger/: cpp_logger.cpp  cpp_logger.h
CPP_Web_Server/Source/CPP_Terminal/: cpp_terminal.cpp  cpp_terminal.h
CPP_Web_Server/Source/CPP_Timer/: cpp_timer.cpp  cpp_timer.h
CPP_Web_Server/Source/CPP_Web_Server/: publishable_types.h  web_server.cpp  web_server.h
CPP_Web_Server/Source/CPP_Web_Server/website/: index.html  style.css
CPP_Web_Server/Source/website/: index.html  index2.html  style.css
CPP_Web_Server/Source/website/pages/: configure.html  dashboard.html  stats.html  upload.html
CPP_Web_Server/Source/website/pages/css/: style.css
CPP_Web_Server/Source/website/pages/js/: dashboard.js  index.js
CPP_Websocket_Utility/: CMakeLists.txt  main.cpp
CPP_Websocket_Utility/Source/WebsocketClient/: websocket_client.cpp  websocket_client.h
CPP_Websocket_Utility/Source/WebsocketServer/: websocket_server.cpp  websocket_server.h  websocket_server_config.h
CPP_Websocket_Utility/Source/WebsocketServer/website/: index.html  index2.html  style.css  style2.css
